Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-1599

incorrect shadow build locations for initial target selection

    XMLWordPrintable

Details

    • 1d8e176067c48705cdfd746e2c1fb23539f58a8e

    Description

      When opening a project for a first time and prompted with the dialog to choose the initial targets, their shadow build locations are all postfixed with -build instead of -build-targetshortname. This leads to the usual problems down the road with conflicting builds in the same directory.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hunger Tobias Hunger
            ckamm Christian Kamm
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes