Fix targetsetuppage's shadowbuild dirs

* Fix displayed shadow build location
 * Fix shadow build location used by newly set up shadow builds

Task-number: QTCREATORBUG-1599
Reviewed-by: dt