src/plugins/qt4projectmanager/qt4project.h
@@ -161,6 +161,7 @@ public:
     bool wasEvaluateCanceled();
 
     QString defaultTopLevelBuildDirectory() const;
+    static QString defaultTopLevelBuildDirectory(const QString &profilePath);
 
 signals:
     /// emitted after parse
